# gpioshutdown

./: CMakeLists.txt  README.md  gpioshutdown.service  main.cpp
cmake/: Findgpiod.cmake
